Object replacement character (0xFFFC) generates null (0) glyph https://bugs.webkit.org/show_bug.cgi?id=255298 rdar://107897203

Reviewed by Cameron McCormack.

The spec doesn't say anything about the object replacement character being deleted. Neither
Chrome nor Firefox delete the object replacement character.

Tests are being upstreamed at https://github.com/web-platform-tests/wpt/pull/40391.

* LayoutTests/TestExpectations:
* LayoutTests/fast/text/zero-width-characters-complex-script.html:
* LayoutTests/fast/text/zero-width-characters.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-text-decor/text-combine-emphasis-expected-mismatch.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-text-decor/text-combine-emphasis.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-text/white-space/object-replacement-1-expected-mismatch.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-text/white-space/object-replacement-1.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-text/white-space/object-replacement-2-expected-mismatch.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-text/white-space/object-replacement-2.html: Added.
* Source/WebCore/platform/graphics/FontCascade.h:
(WebCore::FontCascade::isCharacterWhoseGlyphsShouldBeDeletedForTextRendering):
(WebCore::FontCascade::treatAsZeroWidthSpaceInComplexScript):

Canonical link: https://commits.webkit.org/264886@main